// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Node Item Size slot should print GiB size when size between 1GiB and 1023GiB 1`] = `
<span
  className="size"
>
  5.0G
</span>
`;

exports[`Project Node Item Size slot should print MiB size when size between 1MiB and 1023MiB 1`] = `
<span
  className="size"
>
  3.0M
</span>
`;

exports[`Project Node Item Size slot should print TiB size when size between 1TiB and 1023TiB 1`] = `
<span
  className="size"
>
  5.0T
</span>
`;

exports[`Project Node Item Size slot should print byte size when size less than 1024 1`] = `
<span
  className="size"
>
  1023.0B
</span>
`;

exports[`Project Node Item Size slot should print hyphen only when unit can not calculate 1`] = `
<span
  className="size"
>
  1.0-
</span>
`;

exports[`Project Node Item Size slot should print kibibyte size when size between 1KiB and 1023KiB 1`] = `
<span
  className="size"
>
  2.0K
</span>
`;

exports[`Project Node Item Size slot should print zero size 1`] = `
<span
  className="size"
>
  0.0B
</span>
`;
